--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,1 @@
-<<h1>This Page has been viewed <%= pluralize(@page_hits, 'time') %>!</h1>
+<h1>This Page has been viewed <%= pluralize(@page_hits, 'time') %>!</h1>
