--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,4 +5,6 @@
     })
   </script>
 <% end %>
+
 <h1>This page has been viewed <%= pluralize(@page_hits, 'time') %>!</h1>
+<p>Request handled by host: <b><%= @hostname %></b></p>
